AAP19528_a - Implement peer review changes from backport PR#1882

--- a/downstream/assemblies/platform/assembly-gateway-licensing.adoc
+++ b/downstream/assemblies/platform/assembly-gateway-licensing.adoc
@@ -5,7 +5,7 @@ ifdef::context[:parent-context: {context}]
 
 :context: licensing-gw
 
-Ansible is an open source software project and is licensed under the GNU General Public License version 3, as described in the link:https://github.com/ansible/ansible/blob/devel/COPYING[Ansible Source Code]
+Ansible is an open source software project and is licensed under the GNU General Public License version 3, as described in the link:https://github.com/ansible/ansible/blob/devel/COPYING[Ansible Source Code].
 
 You must have valid subscriptions attached before installing {PlatformNameShort}. 
 
