--- a/downstream/modules/platform/proc-aap-activate-with-credentials.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-credentials.adoc
@@ -10,7 +10,7 @@ When {PlatformNameShort} launches for the first time, the {PlatformNameShort} Su
 You are opted in for {Analytics} by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
 
 . From the navigation panel, select {MenuSetSystem}.
-. Uncheck the *Gather data for {Analytics}* option.
+. Clear the *Gather data for {Analytics}* option.
 . Click btn:[Save].
 ====
 
