Add Azure KB articles

--- a/stories/assembly-azure-install.adoc
+++ b/stories/assembly-azure-install.adoc
@@ -34,6 +34,10 @@ include::topics/con-azure-aks-cidr.adoc[leveloffset=+3]
 // Prerequisites - Service Principal
 include::topics/proc-azure-create-service-principal.adoc[leveloffset=+2]
 
+// KB articles
+include::topics/ref-azure-policy.adoc[leveloffset=+2]
+include::topics/proc-azure-entitling-subscription.adoc[leveloffset=+2]
+
 // Deployment
 include::topics/proc-azure-deploy-aap.adoc[leveloffset=+1]
 
