--- a/stories/assembly-azure-network-peering.adoc
+++ b/stories/assembly-azure-network-peering.adoc
@@ -1,12 +1,9 @@
 ifdef::context[:parent-context: {context}]
 
 [id="azure-network-peering"]
-= Private network peering
+= Private network peering for private deployments
 
 :context: azure-install
-
-// [role="_abstract"]
-// You can use these instructions to install
 
 {AAPonAzureNameShort} is deployed into an independent managed resource group with its own Azure virtual network (VNet).
 
