--- a/stories/assembly-azure-access.adoc
+++ b/stories/assembly-azure-access.adoc
@@ -14,6 +14,11 @@ include::assembly-azure-hub-spoke-peering.adoc[leveloffset=+3]
 include::assembly-azure-vwan-peering.adoc[leveloffset=+3]
 include::assembly-azure-direct-peering.adoc[leveloffset=+3]
 
+// KB articles
+include::topics/proc-azure-user-defined-routing-tables.adoc[leveloffset=+2]
+include::topics/ref-azure-virtual-appliance-routing.adoc[leveloffset=+2]
+include::topics/proc-azure-private-dns.adoc[leveloffset=+2]
+
 // Accessing AAP
 include::topics/proc-azure-accessing-aap.adoc[leveloffset=+1]
 include::topics/proc-azure-license-association.adoc[leveloffset=+2]
