AAP18813 - Fixing formatting issues and other corrections

--- a/downstream/assemblies/platform/assembly-controller-applications.adoc
+++ b/downstream/assemblies/platform/assembly-controller-applications.adoc
@@ -11,12 +11,12 @@ You can configure these tokens as read-only.
 You can create an application that is representative of the external application you are integrating with, then use it to create tokens for the application to use on behalf of its users.
 
 Associating these tokens with an application resource enables you to manage all tokens issued for a particular application. 
-By separating the issue of tokens under *OAuth Applications*, you can revoke all tokens based on the Application without having to revoke all tokens in the system.
+By separating the issue of tokens under *OAuth Applications*, you can revoke all tokens based on the application without having to revoke all tokens in the system.
 
 include::platform/ref-controller-applications-getting-started.adoc[leveloffset=+1]
-include::platform/proc-controller-create-application.adoc[leveloffset=+1]
 include::platform/ref-gw-access-rules-apps-tokens.adoc[leveloffset=+2]
 include::platform/ref-gw-application-functions.adoc[leveloffset=+2]
 include::platform/ref-gw-request-token-after-expiration.adoc[leveloffset=+3]
+include::platform/proc-controller-create-application.adoc[leveloffset=+1]
 //include::platform/ref-controller-apps-add-tokens.adoc[leveloffset=+2]
-include::platform/proc-controller-apps-create-tokens.adoc[leveloffset=+1]
+ 
