--- a/downstream/modules/platform/ref-controller-applications-getting-started.adoc
+++ b/downstream/modules/platform/ref-controller-applications-getting-started.adoc
@@ -2,11 +2,10 @@
 
 = Getting started with OAuth Applications
 
-From the navigation panel, select {MenuAMAdminOauthApps}.
-The *OAuth Applications* page displays a searchable list of all available applications currently managed by {PlatformNameShort} and can that you can sort by *Name*.
+You can access the *OAuth Applications* page from the navigation panel by selecting {MenuAMAdminOauthApps}. From there you can view, create, sort and search for applications currently managed by {PlatformNameShort} and {ControllerName}. 
 
 //image:apps-list-view-examples.png[Applications- with example apps]
 
-If no applications exist, you are requested to create applications.
+If no applications exist, you can create one by clicking btn:[Create application].
 
 //image:apps-list-view-empty.png[Add applications]
