--- a/downstream/modules/platform/ref-gw-request-token-after-expiration.adoc
+++ b/downstream/modules/platform/ref-gw-request-token-after-expiration.adoc
@@ -3,9 +3,10 @@
 = Requesting an access token after expiration
 
 The *Gateway access token expiration* defaults to 600 seconds (10 minutes).
+
 The best way to set up application integrations using the *Authorization code* grant type is to allowlist the origins for those cross-site requests. More generally, you must allowlist the service or application you are integrating with the platform, for which you want to provide access tokens.
 
-To do this, have your Administrator add this allowlist to their local {PlatformNameShort} settings in `/etc/tower/conf.d/custom.py`: 
+To do this, have your administrator add this allowlist to their local {PlatformNameShort} settings in `/etc/tower/conf.d/custom.py`: 
 
 ----
 CORS_ORIGIN_ALLOW_ALL = True
