Add RPM 2.4-7.3 async release notes
AAP 2.4-7.3 Release notes

https://issues.redhat.com/browse/AAP-31171

--- a/downstream/titles/release-notes/topics/rpm-version-table.adoc
+++ b/downstream/titles/release-notes/topics/rpm-version-table.adoc
@@ -6,6 +6,14 @@
 |===
 | Errata advisory | Component versions
 
+| xref:rpm-24-73[RHSA-2024:6765] + 
+Sep 18, 2024  | 
+* `ansible-automation-platform-installer` 2.4-7.1 
+* `ansible-core` 2.15.12
+* {ControllerNameStart} 4.5.11
+* {HubNameStart} 4.9.2
+* {EDAName} 1.0.7
+
 | xref:rpm-24-72[RHSA-2024:6428] + 
 Sep 5, 2024  | 
 * `ansible-automation-platform-installer` 2.4-7.1 
