--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -28,6 +28,7 @@ include::topics/async-updates.adoc[leveloffset=+1]
 
 include::topics/rpm-version-table.adoc[leveloffset=+3]
 
+include::topics/rpm-24-73.adoc[leveloffset=+3]
 include::topics/rpm-24-72.adoc[leveloffset=+3]
 include::topics/rpm-24-71.adoc[leveloffset=+3]
 include::topics/rpm-24-7.adoc[leveloffset=+3]
