Removing TBDs from Controller docs
Added Analytics back to Configuring AE

Remove TBDs from Controller documentation

https://issues.redhat.com/browse/AAP-30985

--- a/downstream/modules/platform/proc-controller-importing-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-importing-subscriptions.adoc
@@ -45,7 +45,7 @@ This option is checked by default, but you can opt out of any of the following:
 * *Insights Analytics*. Provides a high level analysis of your automation with {ControllerName}. 
 It helps you to identify trends and anomalous use of the controller. 
 For opt-in of {Analytics} to be effective, your instance of {ControllerName} must be running on {RHEL}. 
-For more information, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#ref-controller-automation-analytics[{Analytics}] section. TBD
+For more information, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/configuring_automation_execution/index#ref-controller-automation-analytics[{Analytics}] section of _{ControllerAG}_.
 +
 [NOTE]
 ====
