--- a/downstream/assemblies/platform/assembly-ag-controller-usability-analytics.adoc
+++ b/downstream/assemblies/platform/assembly-ag-controller-usability-analytics.adoc
@@ -11,8 +11,9 @@ Only users installing a trial of or a fresh installation of are opted-in for thi
 //You can opt out or control the way {ControllerName} collects data by setting your participation level in the *User Interface settings* in the {MenuAEAdminSettings} menu.
 
 //Should Settings menu be a link?
+For information on setting up {Analytics}, see xref:proc-controller-configure-analytics[Configuring {Analytics}].
 
-include::platform/proc-controller-control-data-collection.adoc[leveloffset=+1]
+//include::platform/proc-controller-control-data-collection.adoc[leveloffset=+1]
 include::platform/ref-controller-automation-analytics.adoc[leveloffset=+1]
 include::platform/ref-controller-use-by-organization.adoc[leveloffset=+2]
 include::platform/ref-controller-jobs-run-by-organization.adoc[leveloffset=+2]
