--- a/downstream/modules/platform/ref-controller-automation-analytics.adoc
+++ b/downstream/modules/platform/ref-controller-automation-analytics.adoc
@@ -2,7 +2,7 @@
 
 = {Analytics}
 
-When you imported your license for the first time, you were given options related to the collection of data that powers {Analytics}, a cloud service that is part of the {PlatformNameShort} subscription.
+When you imported your license for the first time, you were given the option of collecting data that powers {Analytics}, a cloud service that is part of the {PlatformNameShort} subscription.
 
 [IMPORTANT]
 ====
@@ -12,15 +12,7 @@ For opt-in of {Analytics} to have any effect, your instance of {ControllerName} 
 As with Red Hat Insights, {Analytics} is built to collect the minimum amount of data needed.
 No credential secrets, personal data, automation variables, or task output is gathered.
 
-For more information, see xref:ref-controller-data-collection-details[Details of data collection].
-
-To enable this feature, turn on data collection for {Analytics} and enter your Red Hat customer credentials in the *Miscellaneous System settings* of the System configuration list of options in the {MenuAEAdminSettings} menu.
-
-image:configure-controller-system-misc-analytics.png[Miscellaneous System Settings]
-
-You can view the location to which the collection of insights data is uploaded in the *{Analytics} upload URL* field on the *Details* page.
-
-image:misc-system-details-analytics-url.png[Insights location]
+To enable this feature, see xref:proc-controller-configure-analytics[Configuring {Analytics}].
 
 By default, the data is collected every four hours.
 When you enable this feature, data is collected up to a month in arrears (or until the previous collection).
@@ -34,7 +26,7 @@ This setting can also be enabled through the API by specifying `INSIGHTS_TRACKIN
 
 The {Analytics} generated from this data collection can be found on the link:https://cloud.redhat.com[Red Hat Cloud Services] portal.
 
-image:aa-dashboard.png[Analytics dashboard]
+//image:aa-dashboard.png[Analytics dashboard]
 
 *Clusters* data is the default view.
 This graph represents the number of job runs across all {ControllerName} clusters over a period of time.
@@ -53,3 +45,8 @@ On the clouds navigation panel, select menu:Organization Statistics[] to view in
 * xref:ref-controller-use-by-organization[Use by organization]
 * xref:ref-controller-jobs-run-by-organization[Job runs by organization]
 * xref:ref-controller-organization-status[Organization status]
+
+[NOTE]
+====
+The organization statistics page will be deprecated in a future release.
+====
