Update containerized install guide
Containerized installer - implement hackathon docs feedback

https://issues.redhat.com/browse/AAP-30481

--- a/downstream/modules/platform/proc-downloading-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-downloading-containerized-aap.adoc
@@ -1,14 +1,16 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="downloading-containerizzed-aap_{context}"]
+[id="downloading-containerized-aap_{context}"]
 
 = Downloading {PlatformNameShort}
 
-[role="_abstract"]
+Choose the installer you need based on your {RHEL} environment internet connectivity and download the installer to your RHEL host.
 
 .Procedure
 
 . Download the latest installer .tar file from the link:{PlatformDownloadUrl}[{PlatformNameShort} download page]. 
+.. For online installations: {PlatformNameShort} {PlatformVers} Containerized Setup
+.. For offline or bundled installations: {PlatformNameShort} {PlatformVers} Containerized Setup Bundle
 
 . Copy the installer .tar file and the optional manifest .zip file onto your {RHEL} host.
 
@@ -16,13 +18,13 @@
 
 . Unpack the installer .tar file into your installation directory, and go to the unpacked directory. 
 +
-.. For the online installer:
+.. To unpack the online installer:
 +
 ----
 $ tar xfvz ansible-automation-platform-containerized-setup-<version>.tar.gz
 ----
 +
-.. For the bundled installer:
+.. To unpack the offline or bundled installer:
 +
 ----
 $ tar xfvz ansible-automation-platform-containerized-setup-bundle-<version>-<arch_name>.tar.gz
