--- a/downstream/modules/platform/proc-using-postinstall.adoc
+++ b/downstream/modules/platform/proc-using-postinstall.adoc
@@ -14,7 +14,7 @@ You can use the optional postinstall feature of containerized {PlatformNameShort
 
 
 .Procedure
-. The postinstall feature is disabled by default. To use the postinstaller, uncomment the following variables in your inventory file:
+. The postinstall feature is disabled by default. To use the postinstaller, add the following variables in your inventory file:
 +
 ----
 controller_postinstall=true
