Updates based on peer review feedback

--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -18,32 +18,33 @@ To use the example inventory files, replace the `< >` placeholders with your spe
 
 Use the following example inventory file to perform an online installation for the containerized growth topology:
 
+[subs="+attributes"]
 ----
-# This is the AAP installer inventory file
-# Please consult the docs if you're unsure what to add
+# This is the {PlatformNameShort} installer inventory file
+# Please consult the documentation if you are unsure what to add
 # For all optional variables please consult the included README.md
 
-# This section is for your AAP Gateway host(s)
+# This section is for your platform gateway hosts
 # -----------------------------------------------------
 [automationgateway]
 aap.example.org
 
-# This section is for your AAP Controller host(s)
+# This section is for your {ControllerName} hosts
 # -------------------------------------------------
 [automationcontroller]
 aap.example.org
 
-# This section is for your AAP Automation Hub host(s)
+# This section is for your {HubName} hosts
 # -----------------------------------------------------
 [automationhub]
 aap.example.org
 
-# This section is for your AAP EDA Controller host(s)
+# This section is for your {EDAcontroller} hosts
 # -----------------------------------------------------
 [automationeda]
 aap.example.org
 
-# This section is for the AAP database
+# This section is for the {PlatformNameShort} database
 # --------------------------------------
 [database]
 aap.example.org
@@ -60,25 +61,25 @@ registry_password=<your RHN password>
 
 redis_mode=standalone
 
-# AAP Gateway
+# Platform gateway
 # -----------
 gateway_admin_password=<set your own>
 gateway_pg_host=aap.example.org
 gateway_pg_password=<set your own>
 
-# AAP Controller
+# {ControllerNameStart}
 # --------------
 controller_admin_password=<set your own>
 controller_pg_host=aap.example.org
 controller_pg_password=<set your own>
 
-# AAP Automation Hub
+# {HubNameStart}
 # ------------------
 hub_admin_password=<set your own>
 hub_pg_host=aap.example.org
 hub_pg_password=<set your own>
 
-# AAP EDA Controller
+# {EDAcontroller}
 # ------------------
 eda_admin_password=<set your own>
 eda_pg_host=aap.example.org
@@ -89,37 +90,38 @@ eda_pg_password=<set your own>
 
 Use the following example inventory file to perform an online installation for the containerized enterprise topology:
 
+[subs="+attributes"]
 ----
-# This is the AAP installer inventory file
-# Please consult the docs if you're unsure what to add
+# This is the {PlatformNameShort} installer inventory file
+# Please consult the documentation if you are unsure what to add
 # For all optional variables please consult the included README.md
 
-# This section is for your AAP Gateway host(s)
+# This section is for your platform gateway hosts
 # -----------------------------------------------------
 [automationgateway]
 gateway1.example.org
 gateway2.example.org
 
-# This section is for your AAP Controller host(s)
+# This section is for your {ControllerName} hosts
 # -------------------------------------------------
 [automationcontroller]
 controller1.example.org
 controller2.example.org
 
-# This section is for your AAP Execution host(s)
+# This section is for your {PlatformNameShort} execution hosts
 # ------------------------------------------------
 [execution_nodes]
 hop1.example.org receptor_type='hop'
 exec1.example.org
 exec2.example.org
 
-# This section is for your AAP Automation Hub host(s)
+# This section is for your {HubName} hosts
 # -----------------------------------------------------
 [automationhub]
 hub1.example.org
 hub2.example.org
 
-# This section is for your AAP EDA Controller host(s)
+# This section is for your {EDAcontroller} hosts
 # -----------------------------------------------------
 [automationeda]
 eda1.example.org
@@ -140,7 +142,7 @@ eda2.example.org
 registry_username=<your RHN username>
 registry_password=<your RHN password>
 
-# AAP Gateway
+# Platform gateway
 # -----------
 gateway_admin_password=<set your own>
 gateway_pg_host=externaldb.example.org
@@ -148,7 +150,7 @@ gateway_pg_database=<set your own>
 gateway_pg_username=<set your own>
 gateway_pg_password=<set your own>
 
-# AAP Controller
+# {ControllerNameStart}
 # --------------
 controller_admin_password=<set your own>
 controller_pg_host=externaldb.example.org
@@ -156,7 +158,7 @@ controller_pg_database=<set your own>
 controller_pg_username=<set your own>
 controller_pg_password=<set your own>
 
-# AAP Automation Hub
+# {HubNameStart}
 # ------------------
 hub_admin_password=<set your own>
 hub_pg_host=externaldb.example.org
@@ -164,7 +166,7 @@ hub_pg_database=<set your own>
 hub_pg_username=<set your own>
 hub_pg_password=<set your own>
 
-# AAP EDA Controller
+# {EDAcontroller}
 # ------------------
 eda_admin_password=<set your own>
 eda_pg_host=externaldb.example.org
